--- a/content/themes/pitaveri/sass/partials/_nav.scss
+++ b/content/themes/pitaveri/sass/partials/_nav.scss
@@ -55,6 +55,8 @@
     @include breakpoint($breakpoint-s) {
         @include adjust-font-size-to(22px,4);
         text-align: left;
+        left: 0;
+        right: 0;
 
         &:nth-child(2n) {
             text-align: center;
